Name:           PhoneDirectory
Version:        0.4
Cabal-Version:  >=1.6
Build-Type:     Custom
License:        GPL
License-File:   LICENSE.txt
Copyright:      (C) 2009 Michael Steele
Author:         Michael Steele <mikesteele81@gmail.com>
Maintainer:     Michael Steele <mikesteele81@gmail.com>
Stability:      provisional
Homepage:       http://www.michaelsteele.us/phonedirectory/
Bug-Reports:    http://github.com/mikesteele81/Phone-Directory/issues/
Synopsis:       Create a nicely formatted list of contacts.
Description:
  PhoneDirectory is an application used to create a nicely formatted 2-page
  .pdf file representing a list of contact names and numbers.  It features a
  simple GUI interface that makes adding, changing, or deleting information
  easy.
Category:       Utils
Data-Files:     data/images/*.ico

Flag test
  description: Build test program.
  default:     False

Executable pdirectory
  Build-Depends:
    attempt >= 0.3,
    base < 5,
    bytestring >= 0.9,
    convertible-text >= 0.3,
    csv,
    data-object >= 0.3,
    data-object-json >= 0.3,
    filepath,
    HPDF >= 1.4,
    mtl,
    safe >= 0.2,
    time,
    wx,
    wxcore
  Main-Is:        Main.hs
  hs-source-dirs: src
  if os(windows)
    ghc-options: -Wall -O2 -optl-mwindows
  else
    ghc-options:    -Wall -O2

Executable test
  build-depends:
    base,
    regex-posix >= 0.94,
    QuickCheck >= 2.1
  hs-source-dirs: src, tests
  main-is:        TestMain.hs
  if !flag(test)
    buildable:    False
