Name:           PhoneDirectory
Version:        0.7
Cabal-Version:  >=1.14
Build-Type:     Custom
License:        GPL
License-File:   LICENSE.txt
Copyright:      (C) 2009 Michael Steele
Author:         Michael Steele <mikesteele81@gmail.com>
Maintainer:     Michael Steele <mikesteele81@gmail.com>
Stability:      provisional
Homepage:       http://www.michaelsteele.us/phonedirectory/
Bug-Reports:    http://github.com/mikesteele81/Phone-Directory/issues/
Synopsis:       Create a nicely formatted list of contacts.
Description:
  PhoneDirectory is an application used to create a nicely formatted 2-page
  .pdf file representing a list of contact names and numbers.  It features a
  simple GUI interface that makes adding, changing, or deleting information
  easy.
Category:       Utils
Data-Files:     data/images/*.ico

Flag test
  description: Build test program.
  default:     False

Executable pdirectory
  Build-Depends:
    base         >= 4.5 && < 4.6,
    aeson        >= 0.6 && < 0.7,
    bytestring   >= 0.9 && < 0.10,
    bytestring-csv >= 0.1 && < 0.2,
    filepath,
    HPDF         >= 1.4,
    safe         >= 0.3 && < 0.4,
    text         >= 0.11 && < 0.12,
    time,
    transformers >= 0.2 && < 0.3,
    wx,
    wxcore
  Default-Language: Haskell2010
  Main-Is:        Main.hs
  hs-source-dirs: src
  if os(windows)
    ghc-options: -Wall -O2 -optl-mwindows
    ld-options: src/icon.o
  else
    ghc-options: -Wall -O2

Executable test
  if flag(test)
    build-depends:
      base        >= 4.5 && < 4.6,
      regex-posix >= 0.94,
      QuickCheck  >= 2.4 && < 2.5
    hs-source-dirs: src
    buildable: True
  else
    buildable: False
  Default-Language: Haskell2010
  main-is:        TestMain.hs
